--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,28 @@ body {
     font-family: Arial, sans-serif;
     padding: 20px;
     text-align: center;
-    font-size: large;
+    font-size: 54px;
 }
 
 h1 {
     margin-bottom: 20px;
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
 
+    gap: 20px;
+    
+}
+
+.gallery_item {
+    border: 1px solid grey;
+   
+}
+
+img {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+}
